--- a/devslopes-social/Base.lproj/Main.storyboard
+++ b/devslopes-social/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +21,119 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G83-V5-45l" customClass="FancyView" customModule="devslopes_social" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="W4l-0v-GP7">
+                                        <rect key="frame" x="112" y="28" width="150" height="94"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="3uT-hI-HHX"/>
+                                    <constraint firstItem="W4l-0v-GP7" firstAttribute="centerX" secondItem="G83-V5-45l" secondAttribute="centerX" id="4mf-ko-bnz"/>
+                                    <constraint firstItem="W4l-0v-GP7" firstAttribute="centerY" secondItem="G83-V5-45l" secondAttribute="centerY" id="pI8-vf-ebM"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4z-zP-Vf7">
+                                <rect key="frame" x="0.0" y="592" width="375" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSk-LH-Ihr">
+                                        <rect key="frame" x="8" y="8" width="359" height="59"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="sSk-LH-Ihr" secondAttribute="trailing" constant="8" id="Lx4-Bo-I6g"/>
+                                    <constraint firstItem="sSk-LH-Ihr" firstAttribute="leading" secondItem="b4z-zP-Vf7" secondAttribute="leading" constant="8" id="N6K-Ed-3AM"/>
+                                    <constraint firstAttribute="bottom" secondItem="sSk-LH-Ihr" secondAttribute="bottom" constant="8" id="N9m-UU-jIC"/>
+                                    <constraint firstAttribute="height" constant="75" id="Uf0-Td-nnT"/>
+                                    <constraint firstItem="sSk-LH-Ihr" firstAttribute="top" secondItem="b4z-zP-Vf7" secondAttribute="top" constant="8" id="jrG-hA-Ff2"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign-in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zwS-dF-fE9">
+                                <rect key="frame" x="16" y="170" width="343" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="7ZN-IG-gLm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87198437500000003" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJD-Vu-k6Y" customClass="RoundBtn" customModule="devslopes_social" customModuleProvider="target">
+                                <rect key="frame" x="112" y="230" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.25490196078431371" green="0.36078431372549019" blue="0.64313725490196072" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="1Ou-1T-COf"/>
+                                    <constraint firstAttribute="width" constant="150" id="2m0-OY-KNI"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="76M-EW-aO6">
+                                <rect key="frame" x="46" y="420" width="283" height="127"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jfY-hQ-JjQ" customClass="FancyField" customModule="devslopes_social" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.86624999999999996" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IOT-QP-XDs" customClass="FancyField" customModule="devslopes_social" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="45" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.86624999999999996" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u21-PL-8CH" customClass="FancyBtn" customModule="devslopes_social" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="90" width="283" height="37"/>
+                                        <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="0.86624999999999996" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="76M-EW-aO6" firstAttribute="top" secondItem="SJD-Vu-k6Y" secondAttribute="bottom" constant="40" id="2F1-6g-ph8"/>
+                            <constraint firstAttribute="trailing" secondItem="b4z-zP-Vf7" secondAttribute="trailing" id="7Z8-EO-tAt"/>
+                            <constraint firstAttribute="trailing" secondItem="G83-V5-45l" secondAttribute="trailing" id="Ecc-pz-G3X"/>
+                            <constraint firstItem="SJD-Vu-k6Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FrW-Zk-Dkq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="76M-EW-aO6" secondAttribute="trailing" constant="30" id="Inu-1s-XSg"/>
+                            <constraint firstItem="76M-EW-aO6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NZm-g2-DLS"/>
+                            <constraint firstItem="G83-V5-45l" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TWq-V9-1Np"/>
+                            <constraint firstItem="SJD-Vu-k6Y" firstAttribute="top" secondItem="zwS-dF-fE9" secondAttribute="bottom" constant="40" id="XQI-RK-C4H"/>
+                            <constraint firstItem="G83-V5-45l" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="d6W-Rf-8Ko"/>
+                            <constraint firstItem="76M-EW-aO6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="g9u-k6-TuV"/>
+                            <constraint firstItem="zwS-dF-fE9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="p6J-xY-qAD"/>
+                            <constraint firstItem="b4z-zP-Vf7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pZU-sg-1Pm"/>
+                            <constraint firstItem="zwS-dF-fE9" firstAttribute="top" secondItem="G83-V5-45l" secondAttribute="bottom" constant="20" id="rdD-hY-WG1"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="b4z-zP-Vf7" secondAttribute="bottom" id="t1w-aM-nI1"/>
+                            <constraint firstItem="zwS-dF-fE9" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="uFI-He-mNf"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1406" y="349"/>
+        </scene>
+        <!--AV Player View Controller-->
+        <scene sceneID="vKH-Ft-mQw">
+            <objects>
+                <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="qdV-Dc-H0A" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ixs-QM-HeQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2318" y="208"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="devslopes-logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
